--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -10,6 +10,70 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --animate-bounce-horizontal: bounce-horizontal 1s infinite;
+  --animate-gradient-xy: gradient-xy 15s ease infinite;
+  --animate-pulse-slow: pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  --animate-color-pulse: color-pulse 0.5s infinite alternate;
+
+  @keyframes color-pulse {
+    from {
+      color: #f87171;
+    }
+
+    /* Red-400 */
+    to {
+      color: #7f1d1d;
+    }
+
+    /* Red-900 */
+  }
+
+  @keyframes bounce-horizontal {
+
+    0%,
+    100% {
+      transform: translateX(-25%);
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }
+
+    50% {
+      transform: none;
+      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    }
+  }
+
+  @keyframes gradient-xy {
+
+    0%,
+    100% {
+      background-size: 400% 400%;
+      background-position: 0% 50%;
+    }
+
+    50% {
+      background-size: 400% 400%;
+      background-position: 100% 50%;
+    }
+  }
+
+  @keyframes float {
+    0% {
+      transform: translate(0, 0) rotate(0deg);
+    }
+
+    33% {
+      transform: translate(30px, -50px) rotate(10deg);
+    }
+
+    66% {
+      transform: translate(-20px, 20px) rotate(-5deg);
+    }
+
+    100% {
+      transform: translate(0, 0) rotate(0deg);
+    }
+  }
 }
 
 @media (prefers-color-scheme: dark) {
